tests/toy/neg/001115_mutation.toylang
program a = { if a var then sleep; } .
